--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <h3>Fan Favorites</h3>
 	<p>(left to right) Pink Passion, Berry Blaze, Green Machine, Oceanside Orange 
-	<a href="index.html"><img src="images/fourbeachsmoothies.jpg" alt="Top 4 Fan Favorite Smoothies"/></a>
+	<img src="images/fourbeachsmoothies.jpg" alt="Top 4 Fan Favorite Smoothies"/>
 	 </p>
 
 <h3>Customer Pick #2: Oceanside Orange</h3>
@@ -80,7 +80,7 @@
 
 	<p>Beach Bar Smoothie Cafe<br />
 	75 Sunny Blvd &bull; Clearwater, FL 33755<br />
-	<a href = "https://instagram.com" target="_blank">Instagram</a> | <a href = "https://goo.gl/maps/C8pNFkyVvWs3QwZy6">Directions</a> | <a href = "tel:555-230-9875">Phone</a> | <a href = "mailto:beachbar@smoothiecafe.com">Email</a></p>
+	<a href = "https://instagram.com" target="_blank">Instagram</a> | <a href = "https://goo.gl/maps/C8pNFkyVvWs3QwZy6" target="_blank>Directions</a> | <a href = "tel:+5552309875">Phone</a> | <a href = "mailto:beachbar@smoothiecafe.com">Email</a></p>
 
 </footer>  
 
