--- a/locations.html
+++ b/locations.html
@@ -56,7 +56,7 @@
 	<p>Main Location: 0 Mile Hwy, Key West FL
 	 </p>
 
-<a href="index.html"><img src="images/pineapplesmoothie.jpg" alt="Pineapple Smoothie"/></a>
+<img src="images/pineapplesmoothie.jpg" alt="Pineapple Smoothie"/></a>
 
 
 </article> <!-- end main -->
