--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@
 
 <header> 
 
-<a href="menu.html"><img src="images/SmoothieCafeLogo.jpg" alt="Beach Bar Smoothie Cafe Logo"/></a>
+<img src="images/SmoothieCafeLogo.jpg" alt="Beach Bar Smoothie Cafe Logo"/>
 
 </header> 
 
